add QR pages content

--- a/hedgefunds/index.html
+++ b/hedgefunds/index.html
@@ -5,9 +5,111 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex">
+    <link rel="stylesheet" href="../assets/main.css">
     <title>HEDGE FUNDS • ECHO FX</title>
 </head>
 <body>
-    
+    <header>
+        <h1>QR4</h1>
+        <h2>ECHO FX</h2>        
+    </header>       
+    <ul class="efx-link-list">
+        <li>
+            <a href="https://nomura.com" target="_blank">
+                <div class="efx-link-item">
+                    <img src="logos/nomura.png" alt="">
+                    <h3>Nomura Holdings Inc.</h3>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="https://www.mavencp.com" target="_blank">
+                <div class="efx-link-item">
+                    <img src="logos/maven.png" alt="">
+                    <h3>Maven Capital Partners UK LLP</h3>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="https://drw.com" target="_blank">
+                <div class="efx-link-item">
+                    <img src="logos/drw.png" alt="">
+                    <h3>DRW Holdings, LLC</h3>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="https://odey.com" target="_blank">
+                <div class="efx-link-item">
+                    <img src="logos/odey2.png" alt="">
+                    <h3>Odey Asset Management LLP</h3>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="https://rokoscapital.com" target="_blank">
+                <div class="efx-link-item">
+                    <img src="logos/rokos.png" alt="">
+                    <h3>Rokos Capital Management LLP</h3>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="https://tudor.com" target="_blank">
+                <div class="efx-link-item">
+                    <img src="logos/tudor.png" alt="">
+                    <h3>Tudor Capital Europe LLP</h3>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="https://capstoneco.com" target="_blank">
+                <div class="efx-link-item">
+                    <img src="logos/capstone.png" alt="">
+                    <h3>Capstone Investment Advisors (UK) LLP</h3>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="https://spxcapital.com" target="_blank">
+                <div class="efx-link-item">
+                    <img src="logos/spx.png" alt="">
+                    <h3>SPX International Asset Management Ltd.</h3>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="https://elementcapital.com" target="_blank">
+                <div class="efx-link-item">
+                    <img src="logos/element.png" alt="">
+                    <h3>Element Capital Partners LLP</h3>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="https://brevanhoward.com" target="_blank">
+                <div class="efx-link-item">
+                    <img src="logos/brevan.png" alt="">
+                    <h3>Brevan Howard Asset Management LLP</h3>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="https://arrowgrass.com" target="_blank">
+                <div class="efx-link-item">
+                    <img src="logos/arrowgrass.png" alt="">
+                    <h3>Arrowgrass Capital Partners LLP</h3>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="https://northasset.com" target="_blank">
+                <div class="efx-link-item">
+                    <img src="logos/north.png" alt="">
+                    <h3>North Asset Management LLP</h3>
+                </div>
+            </a>
+        </li>
+    </ul>
 </body>
 </html>
