--- a/pollingcompanies/index.html
+++ b/pollingcompanies/index.html
@@ -5,9 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex">
+    <link rel="stylesheet" href="../assets/main.css">
     <title>POLLING COMPANIES • ECHO FX</title>
 </head>
 <body>
-    
+    <header>
+        <h1>QR5</h1>
+        <h2>ECHO FX</h2>        
+    </header>       
+    <ul class="efx-link-list efx-link-list__wider">
+        <li>
+            <a href="https://survation.com" target="_blank">
+                <div class="efx-link-item">
+                    <img src="logos/survation.png" alt="">
+                    <h3>Survation Ltd. </h3>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="https://yougov.co.uk" target="_blank">
+                <div class="efx-link-item">
+                    <img src="logos/yougov.png" alt="">
+                    <h3>YouGov PLC </h3>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="https://icmunlimited.com" target="_blank">
+                <div class="efx-link-item">
+                    <img src="logos/icm.png" alt="">
+                    <h3>ICM Unlimited [Walnut Unlimited Ltd.]</h3>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="https://yonderconsulting.com" target="_blank">
+                <div class="efx-link-item">
+                    <img src="logos/yonder.png" alt="">
+                    <h3>Yonder Consulting Ltd. [known as Populous at the time] </h3>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="https://comresglobal.com" target="_blank">
+                <div class="efx-link-item">
+                    <img src="logos/comres.png" alt="">
+                    <h3>Savanta: ComRes [CommunicateResearch Ltd]</h3>
+                </div>
+            </a>
+        </li>       
+    </ul>
 </body>
 </html>
