--- a/download/index.html
+++ b/download/index.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex">
+    <link rel="stylesheet" href="../assets/main.css">
     <title>DOWNLOAD • ECHO FX</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Download</h1>
+        <h2>ECHO FX</h2>
+    </header>
+    <div>
+        <a href=""></a>
+    </div>
 </body>
 </html>
