--- a/hedgefunds/index.html
+++ b/hedgefunds/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex">
     <link rel="stylesheet" href="../assets/main.css">
-    <title>HEDGE FUNDS • ECHO FX</title>
+    <title>[QR4] HEDGE FUNDS</title>
 </head>
 <body>
     <header>
