--- a/pollingcompanies/index.html
+++ b/pollingcompanies/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex">
     <link rel="stylesheet" href="../assets/main.css">
-    <title>POLLING COMPANIES • ECHO FX</title>
+    <title>QR5 POLLING COMPANIES</title>
 </head>
 <body>
     <header>
