add download page

--- a/download/index.html
+++ b/download/index.html
@@ -6,15 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex">
     <link rel="stylesheet" href="../assets/main.css">
-    <title>DOWNLOAD • ECHO FX</title>
+    <title>DOWNLOAD</title>
 </head>
 <body>
     <header>
         <h1>Download</h1>
         <h2>ECHO FX</h2>
     </header>
-    <div>
-        <a href=""></a>
-    </div>
+    <article class="efx-download-page">
+        <div>
+            <div class="efx-download">
+                <a href="https://echofx-download.eu-central-1.linodeobjects.com/ECHOFX.mov">                
+                    <h3>ECHOFX.mov</h3>
+                    High Quality (ProRes, 20.6 GB)
+                </a>
+            </div>
+            <div class="efx-download">
+                <a href="https://echofx-download.eu-central-1.linodeobjects.com/ECHOFX.mp4">
+                    <h3>ECHOFX.mp4</h3>
+                    Standard Quality (h264, 4.6 GB)
+                </a>
+            </div>
+        </div>
+        <img class="efx-download-img" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQImWN4qCb7HwAFNAIkKz++KgAAAABJRU5ErkJggg=="/>
+    </article>
 </body>
 </html>
