--- a/index.html
+++ b/index.html
@@ -4,10 +4,137 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/main.css">
+    <link rel="stylesheet" href="assets/main.css">
     <title>ECHO FX</title>
 </head>
 <body>
-    
+    <header>
+        <h1>ECHO FX</h1>
+        <h2>DMSTFCTN</h2>        
+    </header>  
+    <article class="efx-press">
+        <section class="efx-press-image">
+            <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQImWN4qCb7HwAFNAIkKz++KgAAAABJRU5ErkJggg=="/>
+        </section>    
+        <section class="efx-press-info">
+            <p>
+                ECHO FX is a book collecting and expanding on the homonymous work by DMSTFCTN - a 20 minute audiovisual performance replaying the events unfolding on the night of the 2016 Brexit referendum.
+            </p>
+            <p>
+                ECHO FX focuses on an unlikely concession made on the night by former trader and face of the Leave EU campaign Nigel Farage: “Remain will edge it…”
+            </p>
+            <p>
+                The out-of-character concession echoed on social media shaping the sentiment of Foreign Exchange markets, which had priced in on a possible Remain win, pushing the Pound to a six month high before any official result announcement. Later that night, as the referendum outcome became apparent, those markets collapsed in disbelief, yet a handful of hedge funds which had purchased private polling data were able to foresee the outcome and short the crashing Pound.
+            </p>
+            <p>
+                Mixing footage of the hedge funds headquartered in London with images and sounds generated in response to historical market data, “ECHO FX” tells a story whose details remain unclear to this day, including the legitimacy of polling companies’ sale of private polls, and whether Farage had any personal dealings in this venture.
+            </p>
+            <p>
+                The book includes a digital download of the performance and expands on the night’s events through both written and visual contributions by DMSTFCTN, CMP OFFICE, Obsolete Capitalism, Valentina Tanni, Cam Simpson + Gavin Finch + Kit Chellel (Bloomberg Businessweek), including a manga rendition of “ECHO FX” created by Krisis.
+            </p>
+        </section>
+        <section class="efx-press-meta">
+            <h4>Edited by</h4>
+            <p>
+                DMSTFCTN and Krisis Publishing
+            </p>
+
+            <h4>Contributions by</h4>
+            <ul>
+            <li>CMP Office</li>
+            <li>DMSTFCTN</li>
+            <li>Krisis Publishing</li>
+            <li>Obsolete Capitalism</li>
+            <li>Cam Simpson + Gavin Finch + Kit Chellel (Bloomberg Businessweek)</li>
+            <li>Valentina Tanni</li>
+            </ul>
+
+            <p>
+                16,5x23 cm<br>
+                208 pages<br>
+                soft cover<br>
+                english <br>
+                9788894402971<br> 
+                € 25<br>
+            </p>
+            <p>
+                Krisis Publishing<br>
+                via Saffi 6 – 25122 Brescia (IT)<br> 
+                <a href="https://www.krisispublishing.com">www.krisispublishing.com</a><br>
+                <a href="mailto:krisis@krisispublishing.com">krisis@krisispublishing.com></a>
+            </p>
+        </section>        
+        <section>
+            <h3>Excerpts</h3>
+            <p>
+                “One of the key moments in ECHO FX focuses on the initial impact of Farage’s conceding statement, a well-timed piece of disinformation which echoed through Twitter on Referendum night, acting as a counterpoint to what, with hindsight, was a predictable result. Farage’s concession spread with memetic speed, reduced to its most transmissible form: Remain will edge it.”
+                <br>— DMSTFCTN
+            </p>
+            <p>
+                “Behind the scenes, a small group of people had a secret – and billions of dollars were at stake. Hedge funds aiming to win big from trades that day had hired YouGov and at least five other polling companies, including Farage’s favorite pollster. [...] These hedge funds were in the perfect position to earn fortunes by short selling the British pound. Others learned the likely outcome of public, potentially market-moving polls before they were published, offering surefire trades.”
+                <br>— C. Simpson, G. Finch, K. Chellel (Bloomberg Businessweek)
+            </p>
+            <p>
+                “Farage’s statement, a sort of amplified market- tribalistic act, can be read as an artful meme counteracting the Real, a shout distorting the purity of the (true) signal through the (faux) credibility of its broadcaster, creating a cognitive fog shielded by a wall of counterintuitive noise. [...] On referendum night, the cognitive fog of the False Event imperma- ted public and private digital platforms alike with instantaneous transmission speed, displacing interconnected global market actors and their exchanges of the British Pound with an amplified capacity.”
+                <br>— Obsolete Capitalism
+            </p>
+            <p>
+                “Today’s reality, when seen through our social media feeds, appears under many forms and produces countless versions of itself, all plausible, all self-contained, and all in stark contrast with each other. The instability of digital images, paired with the power of memes to capture attention and direct feelings is at its most controversial here. In the post-truth era, truth itself is customised, edited and even post-edited, just like any other consumer goods; and the manipulation of signs and symbols that constitutes its customisation is its own kind of magic.”
+                <br>— V. Tanni
+            </p>
+        </section>
+        <section>
+            <h3>Bios</h3>
+            <p>
+                <strong>DMSTFCTN</strong> is a duo investigating the intensities of late capitalism, based across London and Berlin. DMSTFCTN presented work at Fotomuseum Winterthur, ARTER Istanbul, HKW Berlin, Het Nieuwe Instituut, C-Mine and Luma Arles. Their first solo show was held at Aksioma – Institute for Contemporary Art Ljubljana in 2020. Selected performances include Berghain, Onassis Stegi, Design Museum and Spektrum Berlin. DMSTFCTN was the recipient of the Vilém Flusser Residency for Artistic Research 2017 supported by transmediale and of the Design Systems Residency supported by Porto Design Biennale 2019.
+            </p>
+            <p>
+                <strong>Obsolete Capitalism</strong> is a collective of independent researchers preoccupied with the relationship between art, technology and philosophy. Active since 2015, the collective recently edited the 10th issues of the philosophy journal La Deleuziana entitled Rhythm, Chaos and Nonpulsed Man (2020) and the Chaos Variation series of sound releases published by NUKFM (2017-20). Previously, it edited the collection of essays Money, Revolution and Philosophy of the Future (2016) and The Birth of Digital Populism (2015).
+            </p>
+            <p>
+                <strong>CMP Office</strong> is a non-linear creative consultancy and a research-based design office based across London and Paris exploring fashion fabrique as a critical story-telling device. CMP Office prints and installations have reached international recognition including Spazio Maiocchi, Z33 House for Contemporary Arts, Harlesden High Street, Ateliers LUMA, 4th Istanbul Design Biennale and Fashion Space Gallery. Selected CMP Office collaborators and commissioners include Abäke, Adidas, A$AP Rocky, Barbican Art Center, London College of Fashion, Marc Ascoli, Mixcloud, Carhartt WIP, Topsafe Publishing.
+            </p>
+            <p>
+                <strong>Valentina Tanni</strong> is an art historian, curator and lecturer. Her research is centered on the relationship between art and technology, with a particular focus on internet culture. She is an adjunct professor of Digital Art at Politecnico University in Milan and of Culture Digitali (Digital Cultures) at NABA. Nuova Accademia di Belle Arti in Rome and Milan. She published “Random. Navigando contro mano, alla scoperta dell’arte in rete” (Link editions, 2011) and “Memestetica. Il settembre eterno dell’arte” (Nero, 2020). Since November 2020 she is a member of Rome Quadriennale Foundation’s Board of Directors.
+            </p>
+            <p>
+                <strong>Krisis Publishing</strong> is the editorial project of Krisis, a collective composed by practitioners and researchers working within the field of politics of representation. Krisis Publishing develops editorial and audio-visual projects questioning how visual and media cultures affect contemporary society. Krisis Publishing recently edited and published, Entreprecariat (2018), Adversarial Feelings (2019), Design&Conflicts. Vol.1 (2019), James Ballard – All that mattered was sensation (2019), AI&Conflicts. Vol.1 (2020).
+            </p>
+        </section>
+        <section class="efx-press-contents">
+            <h3>Table of contents</h3>
+            <p>ECHO FX DOWNLOAD</p> 
+            <p>
+                REMAIN WILL EDGE IT
+                <em>DMSTFCTN</em>
+            </p>
+            <p>
+                INDEPENDENCE DAY TIMELINE
+            </p> 
+            <p>
+                THE BREXIT SHORT<br>
+                <em>Cam Simpson, Gavin Finch, and Kit Chellel (Bloomberg Businessweek)</em>
+            </p>
+            <p>
+                FIRST OUTLINES OF A MODAL ECONOMY<br>
+                <em>Obsolete Capitalism</em>
+            </p>
+            <p>
+                LIKE A STONE IN A DARK VORTEX            
+                <em>Valentina Tanni</em>
+            </p>
+            <p>
+                LIQUID CAPITAL<br>
+                <em>CMP Office</em>
+            </p>
+            <p>
+                TWITTER QUERY
+            </p> 
+            <p>
+                ECHO FX MANGA<br>
+                <em>Krisis Publishing</em>
+            </p>            
+        </section>
+    </article>
 </body>
 </html>
