initial presskit pg

--- a/index.html
+++ b/index.html
@@ -8,15 +8,12 @@
     <title>ECHO FX</title>
 </head>
 <body>
-    <header>
+    <header class="efx-press-header">
         <h1>ECHO FX</h1>
         <h2>DMSTFCTN</h2>        
     </header>  
-    <article class="efx-press">
-        <section class="efx-press-image">
-            <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQImWN4qCb7HwAFNAIkKz++KgAAAABJRU5ErkJggg=="/>
-        </section>    
-        <section class="efx-press-info">
+    <article class="efx-press"> 
+        <section class="efx-press-info efx-press-col efx-press-col_2">
             <p>
                 ECHO FX is a book collecting and expanding on the homonymous work by DMSTFCTN - a 20 minute audiovisual performance replaying the events unfolding on the night of the 2016 Brexit referendum.
             </p>
@@ -33,38 +30,43 @@
                 The book includes a digital download of the performance and expands on the night’s events through both written and visual contributions by DMSTFCTN, CMP OFFICE, Obsolete Capitalism, Valentina Tanni, Cam Simpson + Gavin Finch + Kit Chellel (Bloomberg Businessweek), including a manga rendition of “ECHO FX” created by Krisis.
             </p>
         </section>
-        <section class="efx-press-meta">
+        <section>
             <h4>Edited by</h4>
             <p>
                 DMSTFCTN and Krisis Publishing
             </p>
 
-            <h4>Contributions by</h4>
-            <ul>
-            <li>CMP Office</li>
-            <li>DMSTFCTN</li>
-            <li>Krisis Publishing</li>
-            <li>Obsolete Capitalism</li>
-            <li>Cam Simpson + Gavin Finch + Kit Chellel (Bloomberg Businessweek)</li>
-            <li>Valentina Tanni</li>
-            </ul>
+            <div class="col-grp">
+                <h4>Contributions by</h4>
+                <ul class="efx-press-contriblist">
+                <li>CMP OFFICE</li>
+                <li>DMSTFCTN</li>
+                <li>Krisis Publishing</li>
+                <li>Obsolete Capitalism</li>
+                <li>Cam Simpson + Gavin Finch + Kit Chellel (Bloomberg Businessweek)</li>
+                <li>Valentina Tanni</li>
+                </ul>
+            </div>
 
-            <p>
-                16,5x23 cm<br>
+            <p class="col-grp">
+                16,5x23 cm, soft cover<br>
                 208 pages<br>
-                soft cover<br>
-                english <br>
+                english<br>
                 9788894402971<br> 
                 € 25<br>
             </p>
-            <p>
+            <p class="col-grp">
                 Krisis Publishing<br>
                 via Saffi 6 – 25122 Brescia (IT)<br> 
                 <a href="https://www.krisispublishing.com">www.krisispublishing.com</a><br>
-                <a href="mailto:krisis@krisispublishing.com">krisis@krisispublishing.com></a>
+                <a href="mailto:krisis@krisispublishing.com">krisis@krisispublishing.com</a>
             </p>
-        </section>        
-        <section>
+        </section>
+        <section class="efx-press-images efx-press-col_2">            
+            <img src="assets/images/01-crop.png" alt="">            
+            <img src="assets/images/08-crop.jpg" alt="">            
+        </section>      
+        <section class="efx-press-excerpts">
             <h3>Excerpts</h3>
             <p>
                 “One of the key moments in ECHO FX focuses on the initial impact of Farage’s conceding statement, a well-timed piece of disinformation which echoed through Twitter on Referendum night, acting as a counterpoint to what, with hindsight, was a predictable result. Farage’s concession spread with memetic speed, reduced to its most transmissible form: Remain will edge it.”
@@ -82,7 +84,7 @@
                 “Today’s reality, when seen through our social media feeds, appears under many forms and produces countless versions of itself, all plausible, all self-contained, and all in stark contrast with each other. The instability of digital images, paired with the power of memes to capture attention and direct feelings is at its most controversial here. In the post-truth era, truth itself is customised, edited and even post-edited, just like any other consumer goods; and the manipulation of signs and symbols that constitutes its customisation is its own kind of magic.”
                 <br>— V. Tanni
             </p>
-        </section>
+        </section>        
         <section>
             <h3>Bios</h3>
             <p>
@@ -100,41 +102,45 @@
             <p>
                 <strong>Krisis Publishing</strong> is the editorial project of Krisis, a collective composed by practitioners and researchers working within the field of politics of representation. Krisis Publishing develops editorial and audio-visual projects questioning how visual and media cultures affect contemporary society. Krisis Publishing recently edited and published, Entreprecariat (2018), Adversarial Feelings (2019), Design&Conflicts. Vol.1 (2019), James Ballard – All that mattered was sensation (2019), AI&Conflicts. Vol.1 (2020).
             </p>
-        </section>
-        <section class="efx-press-contents">
-            <h3>Table of contents</h3>
-            <p>ECHO FX DOWNLOAD</p> 
-            <p>
-                REMAIN WILL EDGE IT
-                <em>DMSTFCTN</em>
-            </p>
-            <p>
-                INDEPENDENCE DAY TIMELINE
-            </p> 
-            <p>
-                THE BREXIT SHORT<br>
-                <em>Cam Simpson, Gavin Finch, and Kit Chellel (Bloomberg Businessweek)</em>
-            </p>
-            <p>
-                FIRST OUTLINES OF A MODAL ECONOMY<br>
-                <em>Obsolete Capitalism</em>
-            </p>
-            <p>
-                LIKE A STONE IN A DARK VORTEX            
-                <em>Valentina Tanni</em>
-            </p>
-            <p>
-                LIQUID CAPITAL<br>
-                <em>CMP Office</em>
-            </p>
-            <p>
-                TWITTER QUERY
-            </p> 
-            <p>
-                ECHO FX MANGA<br>
-                <em>Krisis Publishing</em>
-            </p>            
-        </section>
+        </section> 
+        <section class="efx-press-stretch">
+            <div>
+                <h3>Table of contents</h3>
+                <p>ECHO FX DOWNLOAD</p> 
+                <p>
+                    REMAIN WILL EDGE IT<br>
+                    <em>DMSTFCTN</em>
+                </p>
+                <p>
+                    INDEPENDENCE DAY TIMELINE
+                </p> 
+                <p>
+                    THE BREXIT SHORT<br>
+                    <em>Cam Simpson, Gavin Finch, and Kit Chellel (Bloomberg Businessweek)</em>
+                </p>
+                <p>
+                    FIRST OUTLINES OF A MODAL ECONOMY<br>
+                    <em>Obsolete Capitalism</em>
+                </p>
+                <p>
+                    LIKE A STONE IN A DARK VORTEX<br>
+                    <em>Valentina Tanni</em>
+                </p>
+                <p>
+                    LIQUID CAPITAL<br>
+                    <em>CMP OFFICE</em>
+                </p>
+                <p>
+                    TWITTER QUERY
+                </p> 
+                <p>
+                    ECHO FX MANGA<br>
+                    <em>Krisis Publishing</em>
+                </p>        
+            </div>
+            
+            <img src="assets/images/08-crop.jpg" alt="">
+        </section>     
     </article>
 </body>
 </html>
