--- a/download/index.html
+++ b/download/index.html
@@ -16,16 +16,19 @@
     <article class="efx-download-page">
         <div>
             <div class="efx-download">
-                <a href="https://echofx-download.eu-central-1.linodeobjects.com/ECHOFX.mov">                
+                <a download="ECHOFX.mov" href="https://echofx-download.eu-central-1.linodeobjects.com/ECHOFX.mov">                
                     <h3>ECHOFX.mov</h3>
                     High Quality (ProRes, 20.6 GB)
                 </a>
             </div>
             <div class="efx-download">
-                <a href="https://echofx-download.eu-central-1.linodeobjects.com/ECHOFX.mp4">
+                <a download ="ECHOFX.mp4" href="https://echofx-download.eu-central-1.linodeobjects.com/ECHOFX.mp4">
                     <h3>ECHOFX.mp4</h3>
                     Standard Quality (h264, 4.6 GB)
                 </a>
+            </div>
+            <div class="efx-download">
+                Right Click and select <em>Save Link As</em>
             </div>
         </div>
         <img class="efx-download-img" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQImWN4qCb7HwAFNAIkKz++KgAAAABJRU5ErkJggg=="/>
