--- a/hedgefunds/index.html
+++ b/hedgefunds/index.html
@@ -47,7 +47,7 @@
             </a>
         </li>
         <li>
-            <a href="https://rokoscapital.com" target="_blank">
+            <a href="https://www.rokoscapital.com/" target="_blank">
                 <div class="efx-link-item">
                     <img src="logos/rokos.png" alt="">
                     <h3>Rokos Capital Management LLP</h3>
@@ -55,7 +55,7 @@
             </a>
         </li>
         <li>
-            <a href="https://tudor.com" target="_blank">
+            <a href="https://www.tudor.com/" target="_blank">
                 <div class="efx-link-item">
                     <img src="logos/tudor.png" alt="">
                     <h3>Tudor Capital Europe LLP</h3>
@@ -95,7 +95,7 @@
             </a>
         </li>
         <li>
-            <a href="https://arrowgrass.com" target="_blank">
+            <a href="https://www.arrowgrass.com/" target="_blank">
                 <div class="efx-link-item">
                     <img src="logos/arrowgrass.png" alt="">
                     <h3>Arrowgrass Capital Partners LLP</h3>
