--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                 <a href="mailto:krisis@krisispublishing.com">krisis@krisispublishing.com</a>
             </p>
         </section>
-        <section class="efx-press-images efx-press-col_2">            
+        <!--<section class="efx-press-images efx-press-col_2">            
             <img src="assets/images/01-crop.png" alt="">            
             <img src="assets/images/08-crop.jpg" alt="">            
-        </section>      
+        </section>      -->
         <section class="efx-press-excerpts">
             <h3>Excerpts</h3>
             <p>
@@ -74,7 +74,7 @@
             </p>
             <p>
                 “Behind the scenes, a small group of people had a secret – and billions of dollars were at stake. Hedge funds aiming to win big from trades that day had hired YouGov and at least five other polling companies, including Farage’s favorite pollster. [...] These hedge funds were in the perfect position to earn fortunes by short selling the British pound. Others learned the likely outcome of public, potentially market-moving polls before they were published, offering surefire trades.”
-                <br>— C. Simpson, G. Finch, K. Chellel (Bloomberg Businessweek)
+                <br>— C. Simpson, G. Finch, K. Chellel<br><span style="opacity: 0">— </span>(Bloomberg Businessweek)
             </p>
             <p>
                 “Farage’s statement, a sort of amplified market- tribalistic act, can be read as an artful meme counteracting the Real, a shout distorting the purity of the (true) signal through the (faux) credibility of its broadcaster, creating a cognitive fog shielded by a wall of counterintuitive noise. [...] On referendum night, the cognitive fog of the False Event imperma- ted public and private digital platforms alike with instantaneous transmission speed, displacing interconnected global market actors and their exchanges of the British Pound with an amplified capacity.”
@@ -138,8 +138,6 @@
                     <em>Krisis Publishing</em>
                 </p>        
             </div>
-            
-            <img src="assets/images/08-crop.jpg" alt="">
         </section>     
     </article>
 </body>
