2 col and max width

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="press">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="assets/main.css">
     <title>ECHO FX</title>
 </head>
-<body>
-    <header class="efx-press-header">
+<body class="press">
+    <header class="efx-press-header">        
         <h1>ECHO FX</h1>
-        <h2>DMSTFCTN</h2>        
+        <h2>DMSTFCTN</h2>              
     </header>  
+    <div class="efx-press-image"></div>  
     <article class="efx-press"> 
-        <section class="efx-press-info efx-press-col efx-press-col_2">
+        <section class="efx-press-info">
             <p>
                 ECHO FX is a book collecting and expanding on the homonymous work by DMSTFCTN - a 20 minute audiovisual performance replaying the events unfolding on the night of the 2016 Brexit referendum.
             </p>
@@ -24,13 +25,13 @@
                 The out-of-character concession echoed on social media shaping the sentiment of Foreign Exchange markets, which had priced in on a possible Remain win, pushing the Pound to a six month high before any official result announcement. Later that night, as the referendum outcome became apparent, those markets collapsed in disbelief, yet a handful of hedge funds which had purchased private polling data were able to foresee the outcome and short the crashing Pound.
             </p>
             <p>
-                Mixing footage of the hedge funds headquartered in London with images and sounds generated in response to historical market data, “ECHO FX” tells a story whose details remain unclear to this day, including the legitimacy of polling companies’ sale of private polls, and whether Farage had any personal dealings in this venture.
+                Mixing footage of the hedge funds headquartered in London with images and sounds generated in response to historical market data, ECHO FX tells a story whose details remain unclear to this day, including the legitimacy of polling companies’ sale of private polls, and whether Farage had any personal dealings in this venture.
             </p>
             <p>
-                The book includes a digital download of the performance and expands on the night’s events through both written and visual contributions by DMSTFCTN, CMP OFFICE, Obsolete Capitalism, Valentina Tanni, Cam Simpson + Gavin Finch + Kit Chellel (Bloomberg Businessweek), including a manga rendition of “ECHO FX” created by Krisis.
+                The book includes a digital download of the performance and expands on the night’s events through both written and visual contributions by DMSTFCTN, CMP OFFICE, Obsolete Capitalism, Valentina Tanni, Cam Simpson + Gavin Finch + Kit Chellel (Bloomberg Businessweek), including a manga rendition of ECHO FX created by Krisis.
             </p>
         </section>
-        <section>
+        <section class="efx-press-meta">
             <h4>Edited by</h4>
             <p>
                 DMSTFCTN and Krisis Publishing
@@ -53,14 +54,44 @@
                 208 pages<br>
                 english<br>
                 9788894402971<br> 
-                € 25<br>
+                € 25 at <a href="krisispublishing.com">krisispublishing.com</a><br>
             </p>
-            <p class="col-grp">
-                Krisis Publishing<br>
-                via Saffi 6 – 25122 Brescia (IT)<br> 
-                <a href="https://www.krisispublishing.com">www.krisispublishing.com</a><br>
-                <a href="mailto:krisis@krisispublishing.com">krisis@krisispublishing.com</a>
-            </p>
+            <br>
+            <br>
+            <div class="efx-press-contents">
+                <h3>Table of contents</h3>
+                <p>ECHO FX DOWNLOAD</p> 
+                <p>
+                    REMAIN WILL EDGE IT<br>
+                    <em>DMSTFCTN</em>
+                </p>
+                <p>
+                    INDEPENDENCE DAY TIMELINE
+                </p> 
+                <p>
+                    THE BREXIT SHORT<br>
+                    <em>Cam Simpson, Gavin Finch, and Kit Chellel (Bloomberg Businessweek)</em>
+                </p>
+                <p>
+                    FIRST OUTLINES OF A MODAL ECONOMY<br>
+                    <em>Obsolete Capitalism</em>
+                </p>
+                <p>
+                    LIKE A STONE IN A DARK VORTEX<br>
+                    <em>Valentina Tanni</em>
+                </p>
+                <p>
+                    LIQUID CAPITAL<br>
+                    <em>CMP OFFICE</em>
+                </p>
+                <p>
+                    TWITTER QUERY
+                </p> 
+                <p>
+                    ECHO FX MANGA<br>
+                    <em>Krisis Publishing</em>
+                </p>        
+            </div>
         </section>
         <!--<section class="efx-press-images efx-press-col_2">            
             <img src="assets/images/01-crop.png" alt="">            
@@ -102,43 +133,7 @@
             <p>
                 <strong>Krisis Publishing</strong> is the editorial project of Krisis, a collective composed by practitioners and researchers working within the field of politics of representation. Krisis Publishing develops editorial and audio-visual projects questioning how visual and media cultures affect contemporary society. Krisis Publishing recently edited and published, Entreprecariat (2018), Adversarial Feelings (2019), Design&Conflicts. Vol.1 (2019), James Ballard – All that mattered was sensation (2019), AI&Conflicts. Vol.1 (2020).
             </p>
-        </section> 
-        <section class="efx-press-stretch">
-            <div>
-                <h3>Table of contents</h3>
-                <p>ECHO FX DOWNLOAD</p> 
-                <p>
-                    REMAIN WILL EDGE IT<br>
-                    <em>DMSTFCTN</em>
-                </p>
-                <p>
-                    INDEPENDENCE DAY TIMELINE
-                </p> 
-                <p>
-                    THE BREXIT SHORT<br>
-                    <em>Cam Simpson, Gavin Finch, and Kit Chellel (Bloomberg Businessweek)</em>
-                </p>
-                <p>
-                    FIRST OUTLINES OF A MODAL ECONOMY<br>
-                    <em>Obsolete Capitalism</em>
-                </p>
-                <p>
-                    LIKE A STONE IN A DARK VORTEX<br>
-                    <em>Valentina Tanni</em>
-                </p>
-                <p>
-                    LIQUID CAPITAL<br>
-                    <em>CMP OFFICE</em>
-                </p>
-                <p>
-                    TWITTER QUERY
-                </p> 
-                <p>
-                    ECHO FX MANGA<br>
-                    <em>Krisis Publishing</em>
-                </p>        
-            </div>
-        </section>     
+        </section>   
     </article>
 </body>
 </html>
