--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <li>DMSTFCTN</li>
                 <li>Krisis Publishing</li>
                 <li>Obsolete Capitalism</li>
-                <li>Cam Simpson + Gavin Finch + Kit Chellel (Bloomberg Businessweek)</li>
+                <li>Cam Simpson + Gavin Finch + Kit Chellel<br>(Bloomberg Businessweek)</li>
                 <li>Valentina Tanni</li>
                 </ul>
             </div>
@@ -70,7 +70,7 @@
                 </p> 
                 <p>
                     THE BREXIT SHORT<br>
-                    <em>Cam Simpson, Gavin Finch, and Kit Chellel (Bloomberg Businessweek)</em>
+                    <em>Cam Simpson, Gavin Finch, and Kit Chellel<br>(Bloomberg Businessweek)</em>
                 </p>
                 <p>
                     FIRST OUTLINES OF A MODAL ECONOMY<br>
