type size, add links

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body class="press">
     <header class="efx-press-header">        
-        <h1>ECHO FX</h1>
-        <h2>DMSTFCTN</h2>              
+        <h1><a href="http://www.krisispublishing.com/prodotto/echo-fx/">ECHO FX</a></h1>
+        <h2><a href="https://dmstfctn.net">DMSTFCTN</a></h2>              
     </header>  
     <div class="efx-press-image"></div>  
     <article class="efx-press"> 
@@ -44,17 +44,18 @@
                 <li>DMSTFCTN</li>
                 <li>Krisis Publishing</li>
                 <li>Obsolete Capitalism</li>
-                <li>Cam Simpson + Gavin Finch + Kit Chellel<br>(Bloomberg Businessweek)</li>
+                <li>Cam Simpson + Gavin Finch + Kit Chellel (Bloomberg Businessweek)</li>
                 <li>Valentina Tanni</li>
                 </ul>
             </div>
 
             <p class="col-grp">
-                16,5x23 cm, soft cover<br>
+                16,5x23 cm, soft cover<br>                                
                 208 pages<br>
                 english<br>
                 9788894402971<br> 
-                € 25 at <a href="krisispublishing.com">krisispublishing.com</a><br>
+                full performance download<br>
+                € 25 at <a href="http://www.krisispublishing.com/prodotto/echo-fx/">krisispublishing.com</a><br>
             </p>
             <br>
             <br>
