add different images

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
             <h1><a href="http://www.krisispublishing.com/prodotto/echo-fx/">ECHO FX</a></h1>
             <h2><a href="https://dmstfctn.net">DMSTFCTN</a></h2>              
         </header>  
-        <div class="efx-press-image"></div>  
+        <div class="efx-press-image">
+            <img src="assets/images/press-header/ECHO_FX_.jpg" alt="">
+            <img src="assets/images/press-header/ECHO_FX_02.jpg" alt="">
+            <img src="assets/images/press-header/ECHO_FX_03.jpg" alt="">
+            <img src="assets/images/press-header/ECHO_FX_10.jpg" alt="">
+        </div>  
         <article class="efx-press"> 
             <section class="efx-press-info">
                 <p>
