fix typo from pdf copy paste

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <br>— C. Simpson, G. Finch, K. Chellel<br><span style="opacity: 0">— </span>(Bloomberg Businessweek)
                 </p>
                 <p>
-                    “Farage’s statement, a sort of amplified market- tribalistic act, can be read as an artful meme counteracting the Real, a shout distorting the purity of the (true) signal through the (faux) credibility of its broadcaster, creating a cognitive fog shielded by a wall of counterintuitive noise. [...] On referendum night, the cognitive fog of the False Event imperma- ted public and private digital platforms alike with instantaneous transmission speed, displacing interconnected global market actors and their exchanges of the British Pound with an amplified capacity.”
+                    “Farage’s statement, a sort of amplified market- tribalistic act, can be read as an artful meme counteracting the Real, a shout distorting the purity of the (true) signal through the (faux) credibility of its broadcaster, creating a cognitive fog shielded by a wall of counterintuitive noise. [...] On referendum night, the cognitive fog of the False Event impermated public and private digital platforms alike with instantaneous transmission speed, displacing interconnected global market actors and their exchanges of the British Pound with an amplified capacity.”
                     <br>— Obsolete Capitalism
                 </p>
                 <p>
